ensure searchableselect is transparent when invisible

--- a/src/components/SearchableSelect/SearchableSelect.less
+++ b/src/components/SearchableSelect/SearchableSelect.less
@@ -26,6 +26,7 @@
 
 		&-is-invisible {
 			border: none;
+			background-color: transparent;
 
 			&:active {
 				background-color: @color-neutral-5;
